# thu-info-app

./: .assetstransformer.js  .babelrc  .eslintrc.js  .gitignore  .gitmodules  .increment.js  .jestsetup.js  .prettierrc.js  .project  .travis.yml  AGENTS.md  CONTRIBUTING.md  Gemfile  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  app.json  babel.config.js  draft  index.js  jest.config.json  lerna.json  metro.config.js  package-lock.json  package.json  react-native-reanimated-2.0.0-rc.2.tgz  release  release-notes.md  renovate.json  settings.gradle  setup-harmony.sh  tsconfig.json  versionhelper.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  node.js.yml  packages-check.yml  pr-check.yml
THU Info Design/: README.md  dsp.json
THU Info Design/data/: components.json  fonts.json  tokens.json
__mocks__/: react-native-appearance.js  react-native-localize.js
android/: build.gradle  gradle.properties  settings.gradle
android/app/: THUInfo.jks.enc  _BUCK  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
app/: README.md  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
apps/thu-info-app/: .eslintrc.json  .gitignore  .increment.js  .jestsetup.js  .prettierrc.json  AGENTS.md  app.json  babel.config.json  index.js  jest.config.json  metro.config.js  package.json  tsconfig.json
apps/thu-info-app/android/: build.gradle  gradle.properties  settings.gradle
apps/thu-info-app/harmony/: .gitignore  .npmrc  .ohpmrc  build-profile.json5  code-linter.json5  hvigorfile.ts  hvigorw  hvigorw.js  oh-package-lock.json5  oh-package.json5
apps/thu-info-app/harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
apps/thu-info-app/ios/: AppDelegate.swift  Podfile
apps/thu-info-app/patches/: @thu-info+lib+3.12.0.patch  react-native-safearea-height+1.0.7.patch  react-native-safearea-height+1.0.8.patch
apps/thu-info-app/src/: App.tsx
apps/thu-info-app/test/: render.test.tsx
docs/: index.md
docs/privacy/: index.md
docs/privacy/en/: index.md
docs/privacy/zh/: index.md
gradle/wrapper/: gradle-wrapper.properties
ios/: ExportOptions.ad-hoc.plist  ExportOptions.app-store.plist  Podfile
ios/en.lproj/: InfoPlist.strings
ios/fastlane/: Appfile  Fastfile  README.md
ios/thu_info/: AppDelegate.m  Info.plist
ios/thu_info.xcodeproj/: project.pbxproj
ios/thu_info/Base.lproj/: LaunchScreen.xib
ios/thu_infoTests/: thu_infoTests.m
patches/: react-native-gesture-handler+2.9.0.patch
src/: App.tsx
src/assets/colors/: dark.ts  light.ts  pkuDark.ts  pkuLight.ts
src/assets/htmls/: 0.html  1.html  3.html  7.html  8.html  newsHtml.ts
src/assets/icons/: IconAdd.tsx  IconBankPayment.tsx  IconBoard.tsx  IconBook.tsx  IconCalendar.tsx  IconCard.tsx  IconCheck.tsx  IconCheckGrey.tsx  IconClassroom.tsx  IconClassroomTooltip.tsx  IconConfig.tsx  IconCr.tsx  IconDisable.tsx  IconDorm.tsx  IconDormScore.tsx  IconDown.tsx  IconDownload.tsx  IconDrink.tsx  IconDropdown.tsx  IconEleRecharge.tsx  IconEvaluation.tsx  IconExchange.tsx  IconExclamation.tsx  IconExpenditure.tsx  IconFinance.tsx  IconFormStar.tsx  IconGitLab.tsx  IconGrades.tsx  IconHistory.tsx  IconHole.tsx  IconHomeTab.tsx  IconInvoice.tsx  IconLeft.tsx  IconLibRoom.tsx  IconLibrary.tsx  IconLocal.tsx  IconLock.tsx  IconLoseCard.tsx  IconMain.tsx  IconMinus.tsx  (+29 more)
src/assets/mds/: secondary_en.md  secondary_zh.md
src/assets/themes/: context.tsx  themes.ts
src/assets/translations/: en.ts  zh.ts
src/components/: AuthFlow.tsx  AutoheightWebView.tsx  DatePicker.android.tsx  DatePicker.ios.tsx  DatePickerTrigger.tsx  Root.tsx  easySnackbars.ts  views.tsx
src/components/home/: PickerModalWrapper.tsx  alipayPopup.tsx  cr.tsx  form.tsx  gitlab.tsx  hole.tsx  icon.tsx  libRoomBookTimeIndicator.tsx  libraryRefreshListScreen.tsx  loseCard.ts  report.tsx  secondaryItems.tsx
src/components/news/: IconStarButton.tsx  NewsListItem.tsx
src/components/schedule/: schedule.tsx
src/components/settings/: items.tsx  paginatedRefreshListScreen.tsx  simpleRefreshListScreen.tsx
src/constants/: strings.ts  styles.ts
src/helper/src/: index.ts
src/models/: hole.ts  home.ts
src/models/home/: assessment.ts  hole.ts  jogging.ts  library.ts
src/models/schedule/: schedule.ts
src/network/: Core.ts  basics.ts  core.ts  dorm.ts  hole.ts  library.ts  misc.ts  news.ts  schedule.ts  update.ts  water.ts
src/redux/: constants.ts  defaults.ts  store.ts
src/redux/actions/: auth.ts  basics.ts  cache.ts  config.ts  credentials.ts  hole.ts  reservation.ts  schedule.ts  top5.ts
src/redux/reducers/: auth.ts  basics.ts  cache.ts  config.ts  credentials.ts  hole.ts  reservation.ts  schedule.ts  top5.ts
src/redux/slices/: announcement.ts  auth.ts  campusCard.ts  config.ts  reservation.ts  schedule.ts  timetable.ts
src/redux/states/: auth.ts  cache.ts  config.ts  credentials.ts  hole.ts  reservation.ts  schedule.ts  top5.ts
src/types/: convert-excel-to-json.d.ts  hljs.d.ts  index.ts  react-native-syntax-highlighter.d.ts
src/ui/home/: Hole.tsx  bankPayment.tsx  campusCard.tsx  campusMap.tsx  classroomDetail.tsx  classroomList.tsx  configureDorm.tsx  crCaptcha.tsx  crCoursePlan.tsx  crHome.tsx  crSearchResult.tsx  dorm.tsx  dormScore.tsx  ecard.tsx  eleRecord.tsx  electricity.tsx  email.tsx  emailList.tsx  evaluation.tsx  expenditure.tsx  finance.tsx  form.tsx  gitlabCode.tsx  gitlabHome.tsx  gitlabImage.tsx  gitlabPDF.tsx  gitlabProject.tsx  gitlabSearch.tsx  gitlabTree.tsx  holeDetail.tsx  holeImage.tsx  holeList.tsx  holePublish.tsx  home.tsx  homeStack.tsx  invoice.tsx  invoicePDF.tsx  jogging.tsx  libBookRecord.tsx  libRoomBook.tsx  (+29 more)
src/ui/login/: login.tsx
src/utils/: alipay.ts  calendar.ts  checkUpdate.ts  cheerio.ts  dorm.ts  easterEgg.ts  email.ts  encodeToGb2312.js  extensions.ts  extensionsDeclaration.d.ts  generalAlipay.ts  i18n.ts  leanCloud.ts  markdown.ts  network.ts  permissions.ts  saveImg.ts  svgGenerator.ts  textSplitter.js  themedStyles.ts  webApi.ts
test/: i18n.test.ts  render.test.tsx  schedule.test.ts
(+609 files in other folders)
